--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "frontend",
+  "name": "justiflow-legal-portal",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "Digital Legal Case Management and Virtual Court System",
   "type": "module",
   "scripts": {
     "dev": "vite",
