--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "justiflow-legal-portal",
+  "name": "justice-flow-legal-portal",
   "private": true,
   "version": "1.0.0",
   "description": "Digital Legal Case Management and Virtual Court System",
